<resources>
    <string name="app_name">KeePeT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_user">USER</string>
    <string name="nav_cam">CAM</string>
    <string name="nav_gps">GPS</string>
    <string name="nav_feed">FEED</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="tab1">Home</string>
    <string name="tab2">Cam</string>
    <string name="tab3">Gps</string>
    <string name="tab4">User</string>
    <string name="title_activity_gps">Map</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_profile_sub">Profile_subActivity</string>
    <string name="title_activity_pet_register">PetRegister</string>
    <string name="title_activity_profile_register">ProfileRegisterActivity</string>
    <string name="title_activity_map">MapActivity</string>


    <string name="str_done">완료</string>
    <string name="edit_hint">Enter the name of a place to find Result!</string>
    <string name="button_label">Find</string>
    <string name="textview_label">Result</string>

</resources>